--- a/setup_webserver.yml
+++ b/setup_webserver.yml
@@ -6,7 +6,7 @@
         state: present
 
   - name: create web page
-    ansible.builtin.template:
+    ansible.builtin.copy:
         content: "Web page from ansible PB"
         dest: /var/www/html/index.html
 
