--- a/ansible-roles/roles/haproxy/tasks/main.yml
+++ b/ansible-roles/roles/haproxy/tasks/main.yml
@@ -1,1 +1,16 @@
 # tasks file for haproxy
+- name: Install haproxy package
+  ansible.builtin.package:
+      name: haproxy
+      state: present
+
+- name: update configuration for haproxy
+  ansible.builtin.template:
+      src: haproxy.cfg.j2
+      dest: /etc/haproxy/haproxy.cfg
+
+- name: start haproxy service
+  ansible.builtin.service:
+      name: haproxy
+      state: started
+      enabled: yes
