--- a/ansible-roles/roles/haproxy/tasks/main.yml
+++ b/ansible-roles/roles/haproxy/tasks/main.yml
@@ -8,6 +8,8 @@
   ansible.builtin.template:
       src: haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
+  notify:
+    - restart haproxy
 
 - name: start haproxy service
   ansible.builtin.service:
